# platypus

./: .gitignore  Cargo.toml  PRIVATE_FUNCTIONS_CLASSES.md  PRIVATE_VARIABLES.md  README.md  build.sh  test_all_examples.sh
examples/: bank_account.plat  builtins.plat  classes.plat  control_flow.plat  for_foreach.plat  functions.plat  hello.plat  inheritance.plat  loops.plat  method_property_modification.plat  operators.plat  pattern_matching.plat  private_assign_test.plat  private_classes.plat  private_comprehensive.plat  private_functions.plat  private_test_fail.plat  private_variables.plat  showcase.plat
src/: main.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/runtime/: builtins.rs  mod.rs  value.rs
